--- a/src/content/blog/mdx-test.mdx
+++ b/src/content/blog/mdx-test.mdx
@@ -9,7 +9,7 @@ tags: ["mdx", "astro", "components"]
 
 # Welcome to MDX!
 
-This is a test post to demonstrate that MDX is working correctly in the Volks-Typo theme.
+This is a test post to demonstrate that MDX is working correctly in the Red-Pixel theme.
 
 ## What is MDX?
 
